--- a/.github/workflows/flaskr-ci.yaml
+++ b/.github/workflows/flaskr-ci.yaml
@@ -1,15 +1,8 @@
 name: Build and Test
-  on:
+on:
   push:
-    branches:
-      - 'feature/**'
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
-  jobs:
-    tests:
+jobs:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -35,11 +28,9 @@ name: Build and Test
       - name: Test with pytest
         run: |
           cd examples/tutorial
-          pytest
-    # Build Docker image in a separate job so that it's not tainted by cached build/test files
+          pytest    
+  # Build Docker image in a separate job so that it's not tainted by cached build/test files
   build-image:
-    # Only build image for PRs and merge to main
-    if: github.event_name == 'pull_request' || github.ref_name == github.event.repository.default_branch
     needs: tests
     permissions:
       # Required permission to push images from main with the built-in GITHUB_TOKEN
@@ -63,6 +54,5 @@ name: Build and Test
         uses: docker/build-push-action@v4
         with:
           context: examples/tutorial
-          # Only push image on merge to main
-          push: ${{ github.ref_name == github.event.repository.default_branch }}
+          push: true
           tags: "ghcr.io/${{ env.REPO_LOWER_CASE }}:${{ env.SHA_SHORT }}"
