--- a/.github/workflows/flaskr-ci.yaml
+++ b/.github/workflows/flaskr-ci.yaml
@@ -1,6 +1,13 @@
 name: Build and Test
 on:
   push:
+    branches:
+      - 'feature/**'
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -31,6 +38,8 @@ jobs:
           pytest    
   # Build Docker image in a separate job so that it's not tainted by cached build/test files
   build-image:
+    # Only build image for PRs and merge to main
+    if: github.event_name == 'pull_request' || github.ref_name == github.event.repository.default_branch
     needs: tests
     permissions:
       # Required permission to push images from main with the built-in GITHUB_TOKEN
@@ -54,5 +63,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: examples/tutorial
-          push: true
+          # Only push image on merge to main
+          push: ${{ github.ref_name == github.event.repository.default_branch }}
           tags: "ghcr.io/${{ env.REPO_LOWER_CASE }}:${{ env.SHA_SHORT }}"
